kubernetes/jabeh/04-02-ingress-jabeh.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: 32m
  name: jabeh-ingress
  namespace: jabeh
spec:
  rules:
  - host: jabeh.com
    http:
      paths:
      - backend:
          serviceName: jabeh-master-service
          servicePort: 9000
        path: /
  - host: www.jabeh.com
    http:
      paths:
      - backend:
          serviceName: jabeh-master-service
          servicePort: 9000
        path: /
